trying to inst auto-suggest

--- a/public/index.html
+++ b/public/index.html
@@ -9,4 +9,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://unpkg.com/react-autosuggest/dist/standalone/autosuggest.js"></script>
 </html>
